5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1716_2506.log
== TEST (2019-05-14 17:39:35) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
else: 
	print("LIMITE")


-- OUTPUT:
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:40:41) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
else: 
	print("LIMITE")
	print(anos)
	


-- EXECUTION TIME:
0.129874
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:41:20) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
	print(anos)
else: 
	print("LIMITE")
	print(anos)
	


-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:41:22) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
	print(anos)
else: 
	print("LIMITE")
	print(anos)
	


-- EXECUTION TIME:
0.158691
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:41:50) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
	
else: 
	print("LIMITE")
	
print(anos)
	


-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:42:02) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
	
else: 
	print("LIMITE")
	
print(anos)
	


-- EXECUTION TIME:
0.140381
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:20) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
	
elif (tem <= 0):
	print("LIMITE")
	
print(anos)
	


-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:56) 
-- CODE:
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
anos = 0
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
	
elif (tem <= 0):
	print("LIMITE")
	
print(anos)
	


-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:45:53) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if ( tem == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
	


-- EXECUTION TIME:
0.191675
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:50:00) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if (not tem == 0):
	print("LIMITE")
else:
	print("EXTINCAO")
	
	print(anos)
	


-- OUTPUT:
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:27) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if (not tem == 0):
	print("LIMITE")
else:
	print("EXTINCAO")
	print(anos)
	


-- EXECUTION TIME:
0.155094
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:50:35) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if (not tem == 0):
	print("LIMITE")
else:
	print("EXTINCAO")
print(anos)
	


-- EXECUTION TIME:
0.126766
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:51:36) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if (tem <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
	


-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:51:45) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	acresc = tem * cresce/100
	tem = tem + acresc
	tem = tem - tira 
	anos = anos + 1
if (tem <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
	


-- EXECUTION TIME:
0.190261
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:41:04) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	
	tem = tem + (tem*acresc)/100
	tem = tem - tira 
	anos = anos + 1
if (tem <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    tem = tem + (tem*acresc)/100
NameError: name 'acresc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:41:35) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	
	tem = tem + (tem*cresce)/100
	tem = tem - tira 
	anos = anos + 1
if (tem <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
	


-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:41:46) 
-- CODE:
anos = 0
tem = int(input("Digite a quantidade inicial de tambaquis do tanque de Ariene: "))
cresce = float(input("Digite o percentual de crescimento anual do quantidade de tambaquis: "))
tira = int(input("Digite a quantidade de tambaquis retirados para venda: "))
while ( tem > 0 and tem < 12000): 
	
	tem = tem + (tem*cresce)/100
	tem = tem - tira 
	anos = anos + 1
if (tem <= 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(anos)
	


-- EXECUTION TIME:
0.15393
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
